tests/fail/function-arg-types.virtue
func f(a int, b string)

f(0, 0)
f("a", "a")
f("a", 0)

# expected type string, found int
# expected type int, found string
# expected type int, found string
# expected type string, found int
